Updated Employees page Re-organised file structure Reduced contact to index page Equalised indents Improved contact form Replaced div team in index with section

--- a/src/style.css
+++ b/src/style.css
@@ -21,3 +21,11 @@
 }
 /* anim end */
 
+.hero-banner {
+    background-image: linear-gradient(#1073b590, #1073b590), url("img/Offices.jpg");
+    min-height: 300px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
